--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -109,6 +109,14 @@
   ██ ███ ██ ██   ██ ██   ██ ██      ██      ██      ██   ██      ██
    ███ ███  ██   ██ ██   ██ ██      ██      ███████ ██   ██ ███████
   */
+  .feature {
+    padding-bottom: 10%;
+    margin-bottom: 10%; 
+  }
+  .read-more,
+  .source {
+    margin-top: 20px;
+  }
   .actors-to-gallery {
     background-position: left;
     background-size: cover;
@@ -120,20 +128,11 @@
     font-size: 2rem;
   }
 
-
   .footer-img {
     height: 50vh;
     width: 100vw;
   }
-
-  /*.footer-img {
-  height: 60vh;
-  width: 100%;
-  background-image: url(img/wrapper/rain.jpg);
-  background-repeat: no-repeat;
-  background-size: 50% 50%;
-  background-position: right;
-  }*/
+  
   /*
   ██████   █████  ██      ██      ███████ ██████  ██    ██
  ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
@@ -153,16 +152,21 @@
 
   .mobile-container {
     background-color: rgb(38, 38, 38);
+    height: 100%;
+    padding-bottom: 80px;
+    
+    /*----FlexBox----*/
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
     justify-content: space-evenly;
   }
 
   .mobile-box {
     text-align: center;
     border: 10px solid whitesmoke;
+    margin-bottom: 80px;
   }
+  
 
   .mobile-box a {
     text-decoration: none;
@@ -202,7 +206,8 @@
     background-color: rgb(252, 243, 201);
     display: block;
     /*height: 500px;*/
-    height: 80vh;
+    /*height: 80vh;-------*/
+    height: 88vh;
     width: 100%;
   }
 
