--- a/mobile.css
+++ b/mobile.css
@@ -82,6 +82,7 @@
 
   h3 {
     font-size: 1.5rem;
+    position: relative;
   }
 
   .feature p {
@@ -124,13 +125,12 @@
   */
   .feature {
     /*margin-bottom: 50%;*/
-    padding: 10% 0 10%;
-    border-bottom: 5px solid black;
+    /*border-bottom: 5px solid black;*/
+    border-radius: 25px;
   }
 
   .feature-1 {
-    background-color: rgba(38, 38, 38, 0.41);
-    color: whitesmoke;
+    background-color: rgba(215, 223, 173, 0.8);
   }
 
   .feature-2 {
@@ -146,12 +146,8 @@
     height: 400px;
     width: 100%;
   }
-
-  .hero-to-movies,
-  .movies-to-actors {
-    /*background-size: 50% 100%;*/
-    /*background-position: bottom;*/
-    /*background-attachment: fixed;*/
+  .picture {
+    border-radius: 25px 25px 0 0;
   }
 
   /*
@@ -162,7 +158,7 @@
   ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
  */
   .mobile-box {
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
   }
 
   .mobile-box img {
