--- a/tablet.css
+++ b/tablet.css
@@ -111,7 +111,7 @@
   }
 
   .mobile-box {
-    margin-bottom: 80px;
+    /*margin-bottom: 80px;*/
   }
 
   .mobile-box img {
@@ -131,5 +131,3 @@
  ██      ██    ██ ██    ██    ██    ██      ██   ██
  ██       ██████   ██████     ██    ███████ ██   ██
  */
-  .footer-mobile-wrapper {}
-}
