--- a/style.css
+++ b/style.css
@@ -366,11 +366,30 @@ p {
 }
 
 .read-more {
-  background-color: rgba(180, 165, 147, 0.7);
-  transition: background-color 500ms;
+  background-color: rgba(38, 38, 38, 0.8);
+  color: rgb(252, 226, 17);
+  box-shadow: 4px 4px 3px rgba(38, 38, 38, 0.3);
+  
+
+  transition: background-color 1s;
+  transition: box-shadow 400ms;
 }
 .read-more:hover {
-  background-color: rgb(180, 165, 147);
+  background-color: rgba(38, 38, 38, 0.7);
+  color: rgb(253, 227, 17);
+  box-shadow: 6px 6px 2px rgba(38, 38, 38, 0.4);
+  box-shadow: -6px -6px 6px -4px rgba(255,0,0,0.75),
+
+           6px -6px 6px -4px rgba(0,255,0,0.75),
+
+           6px 6px 6px -4px rgba(255,255,0,0.75),
+
+           -6px 6px 6px -4px rgba(0,0,255,0.75);
+}
+.read-more:active {
+  background-color: rgb(253, 227, 17);
+  color: rgba(38, 38, 38, 0.7);
+  box-shadow: 10px 10px 5px rgba(38, 38, 38, 0.4);
 }
 
 .source {
