h2 new font, desktop social logo new font

--- a/desktop.css
+++ b/desktop.css
@@ -400,10 +400,11 @@
     transition: opacity 5s ease-in-out;
   }
 
-  .social-logo,
-  .follow-b {
+  .social-logo {
     opacity: 0.7;
-    /*.social-list h5 = removed h5 ----*/
+  }
+  .follow-b {
+    opacity: 0.85;
   }
 
   /*
