--- a/mobile.css
+++ b/mobile.css
@@ -72,13 +72,16 @@
 
   .movies h2,
   .actors h2,
-  #gallery h2 {
+  #gallery h2, {
+    font-size: 5rem;
+    letter-spacing: 0;
     padding: 40px 0;
   }
 
   #gallery h2 {
     padding-bottom: 80px;
   }
+  
 
   h3 {
     font-size: 1.5rem;
@@ -94,6 +97,8 @@
     height: 250px;
     width: 350px;
   }
+  
+  
 
   /*  .actors .feature .picture {
     height: 200px;
