--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -217,12 +217,12 @@
     height: 30%;
   }
 
-  .footer-mobile-wrapper h4 {
+  .follow-b {
     /*background-color: aquamarine;*/
     /*background: linear-gradient(to right, rgba(59, 89, 152, 0.8), rgb(29,161,242));*/
-    font-family: 'Cormorant', sans-serif;
-    font-size: 2.4rem;
-    font-weight: 500;
+    /*font-family: 'Fredericka the Great', cursive;*/
+    /*font-size: 2.4rem;*/
+    /*font-weight: 500;*/
     height: 100%;
   }
 
