--- a/desktop.css
+++ b/desktop.css
@@ -102,11 +102,67 @@
     padding: 35px 25px 0;
     margin-bottom: 5%;
   }
+  
+  
+  /*
+  ██████  ██    ██ ████████ ████████  ██████  ███    ██
+  ██   ██ ██    ██    ██       ██    ██    ██ ████   ██
+  ██████  ██    ██    ██       ██    ██    ██ ██ ██  ██
+  ██   ██ ██    ██    ██       ██    ██    ██ ██  ██ ██
+  ██████   ██████     ██       ██     ██████  ██   ████
+  */
+
   .read-more,
   .source {
     margin-top: 10%;
+    transition: background-color 900ms;
   }
-
+  
+  .read-more-1,
+  .source-1,
+  .read-more-2,
+  .source-2 {
+    box-shadow: 4px 4px 1px rgba(38, 38, 38, 0.4);
+    transition: transform 500ms, box-shadow 500ms;
+  }
+  .read-more-3,
+  .source-3 {
+    box-shadow: -4px 4px 1px rgba(38, 38, 38, 0.4);
+    transition: transform 1s;
+  }
+  
+  /*------ Button 1 (Read More + Source)  ---------*/
+  /*-----------------------------------------------*/
+  .button-wrapper:hover .read-more-1,
+  .button-wrapper:hover .source-1 {
+    box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
+    transform: translate(-15px, 0);
+  }
+  
+  /*------ Button 2 (Read More + Source)  ---------*/
+  /*-----------------------------------------------*/
+  .button-wrapper:hover .read-more-2,
+  .button-wrapper:hover .source-2 {
+    box-shadow: 4px 20px 4px rgba(38, 38, 38, 0.4);
+    transform: translate(0, -15px);
+  }
+  
+  /*------ Button 3 (Read More + Source)  ---------*/
+  /*-----------------------------------------------*/
+  .button-wrapper:hover .read-more-3,
+  .button-wrapper:hover .source-3 {
+    box-shadow: -16px 10px 4px rgba(38, 38, 38, 0.4);
+    transform: rotate3d(0, 1, 0, 360deg);
+  }
+  
+  /*----------      Active        ------------*/
+  /*-------------------------------------------*/
+/*  .button-wrapper:active .read-more,
+  .button-wrapper:active .source {
+    background-color: rgba(252, 226, 16, 0.5);
+  }
+ */
+ 
   /*
    ██████   █████  ██      ██      ███████ ██████  ██    ██
   ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
@@ -345,10 +401,10 @@
   ███████  ██████   ██████ ██ ██   ██ ███████
   */
   .social-logo {
-    /*display: block;*/
+    display: block;
     width: 55px;
     height: 55px;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
   }
 
   .facebook {
@@ -368,12 +424,13 @@
    ██████  ██████  ██         ██    ██   ██ ██  ██████  ██   ██    ██
   */
   .copyright {
-    font-family: 'Cormorant', sans-serif;
     background-color: coral;
+    /*display: inline-block;*/
+    font-family: 'Cormorant', sans-serif;
     position: relative;
-    top: 50px;
+    top: 20px;
     text-decoration: none;
-    display: inline-block;
+    /*top: 30px;*/
     /*width: 12%;*/
   }
 
@@ -580,12 +637,19 @@
 
   .footer-info:hover .follow-b {
     /*background-color: darkgreen;*/
+    /*margin: 70px auto 0;*/
+    letter-spacing: 0.4rem;
+    margin: 0 auto;
+    padding: 40px 0 10px;
+    width: 100%;
   }
 
   .footer-info:hover .social-ul {
     /*background-color: red;*/
+    /*height: 40%;*/
+    height: 50%;
     width: 100%;
-    height: 40%;
+    /*margin-bottom: 20px;*/
     display: flex;
     flex-direction: row;
     align-items: center;
