--- a/desktop.css
+++ b/desktop.css
@@ -66,6 +66,11 @@
   .actors h2,
   #gallery h2 {
     padding: 80px 0;
+    text-indent: 2rem;
+  }
+
+  #gallery h2 {
+    padding-bottom: 10px;
   }
 
   /*
@@ -99,8 +104,8 @@
   }
 
   .feature {
-    padding: 35px 25px 0;
-    margin-bottom: 5%;
+    margin: 5% 0;
+    /*padding: 35px 25px 0;*/
   }
   
   
@@ -112,9 +117,17 @@
   ██████   ██████     ██       ██     ██████  ██   ████
   */
 
+  .button-wrapper a:hover {
+    background-color: rgba(38, 38, 38, 0.8);
+    color: rgb(253, 227, 17);
+  }
+  .button-wrapper a:active {
+    background-color: rgba(252, 226, 16, 0.5);
+    color: rgb(38, 38, 38);
+  }
+
   .read-more,
   .source {
-    margin-top: 10%;
     transition: background-color 900ms;
   }
   
@@ -130,6 +143,9 @@
     box-shadow: -4px 4px 1px rgba(38, 38, 38, 0.4);
     transition: transform 1s;
   }
+  
+  
+
   
   /*------ Button 1 (Read More + Source)  ---------*/
   /*-----------------------------------------------*/
@@ -157,12 +173,28 @@
   
   /*----------      Active        ------------*/
   /*-------------------------------------------*/
-/*  .button-wrapper:active .read-more,
+  /*  .button-wrapper:active .read-more,
   .button-wrapper:active .source {
     background-color: rgba(252, 226, 16, 0.5);
   }
- */
- 
+  */
+
+  
+  
+/*  .read-more-1,
+  .source-1,
+  .read-more-2,
+  .source-2 {
+    box-shadow: 4px 4px 1px rgba(38, 38, 38, 0.4);
+    transition: transform 500ms, box-shadow 500ms;
+  }
+  .read-more-3,
+  .source-3 {
+    box-shadow: -4px 4px 1px rgba(38, 38, 38, 0.4);
+    transition: transform 1s;
+  }*/
+  
+
   /*
    ██████   █████  ██      ██      ███████ ██████  ██    ██
   ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
@@ -579,8 +611,7 @@
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover;
+    background-size: 100% 120%;
   }
 
   /*
