--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -18,6 +18,9 @@
   .logo {
     height: 12vh;
   }
+  nav ul li {
+    line-height: 12vh;
+  }
 
   .logo-list {
     /*background-color: aqua;*/
@@ -119,7 +122,7 @@
   }
   .read-more,
   .source {
-    margin-top: 20px;
+    /*margin-top: 20px;*/
   }
   .actors-to-gallery {
     background-position: left;
@@ -226,6 +229,7 @@
     font-weight: bolder;
     margin: 0 auto;
     text-align: center;
+    text-indent: 0.4rem;
     
     -webkit-touch-callout: none;
     /* iOS Safari */
